libs/modkit-db-macros/tests/ui/err_conflicting_resource.stderr
error: secure: specify either `resource_col` or `no_resource`, not both
 --> tests/ui/err_conflicting_resource.rs:5:10
  |
5 | #[derive(Scopable)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Scopable` (in Nightly builds, run with -Z macro-backtrace for more info)
